# rustlearning

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  digitalocean.md  spec.yaml  sqlx_guide.md  useful.md
.sqlx/: query-105704e68a0effefec7b15bcffeff68c5c8c4f165870d0e00ead47d67264bde0.json  query-71b3a395120342b87065340fab51f1721427db5e0c4751a8c56db6854d9ee44f.json
configuration/: base.yaml
migrations/: 20231229231750_seed_user.sql  20231231215208_create_idempotency_table.sql  20240102211756_relax_null_checks_on_idempotency.sql  20240102223757_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domainold.rs  email_client.rs  issue_delivery_worker.rs  jinja.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletter.rs  staticfiles.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs  post_newsletter.html
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
templates/: admin_dashboard.html  login.html  reset_password.html
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
