[package]
name = "rusttest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rusttest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
config = { version = "0.13.4", features = [] }
clap = { version = "4.2.1", features = ["derive"] }
chrono = {version = "0.4.31", default-features = false, features = ["clock"]}
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.0.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-log = { version = "0.2.0", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde_yaml = "0.9.21"
reqwest = "0.11.22"
futures = "0.3.29"
uuid = { version = "1.6.1", features = ["v4"] }
once_cell = "1.17.1"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
once_cell = "1.19.0"
reqwest = "0.11"